# babeltrader_cpp_base

./: CMakeLists.txt  build.yml
cmake/: babeltradercpp.pc.in  babeltradercppConfig.cmake.in
dep_modules/: mugglec.yml  mugglecpp.yml
example/tcp_client/: main.cpp  tcp_client_handle.cpp  tcp_client_handle.h  tcp_client_peer.cpp  tcp_client_peer.h  tcp_client_session.cpp  tcp_client_session.h
example/tcp_server/: main.cpp  tcp_server_handle.cpp  tcp_server_handle.h  tcp_server_peer.cpp  tcp_server_peer.h  tcp_server_session.h
example/tcp_server_channel/: chan_msg.h  channel_worker.cpp  channel_worker.h  main.cpp  tcp_server_handle.cpp  tcp_server_handle.h  tcp_server_peer.cpp  tcp_server_peer.h  tcp_server_session.cpp  tcp_server_session.h
example/tcp_server_worker/: main.cpp  tcp_listen_handle.cpp  tcp_listen_handle.h  tcp_server_handle.cpp  tcp_server_handle.h  tcp_server_peer.cpp  tcp_server_peer.h  tcp_server_session.cpp  tcp_server_session.h
mock/babeltrader/cpp/: mock.h  mock_macro.h  mock_session.cpp  mock_session.h  mock_tcp_socket_pair.cpp  mock_tcp_socket_pair.h
src/babeltrader/cpp/: babeltrader_cpp.h  codec_chain.cpp  codec_chain.h  config.h.in  decoder.cpp  decoder.h  dispatcher.cpp  dispatcher.h  encoder.cpp  encoder.h  macro.h  msg.h  session.cpp  session.h
src/babeltrader/cpp/codec/: bytes_to_msg_decoder.cpp  bytes_to_msg_decoder.h  msg_to_bytes_encoder.cpp  msg_to_bytes_encoder.h
test/codec/: test_codec.cpp
